# discord_msg_reader_sender_tui

./: .gitignore  .gitmodules  Cargo.toml  DaveSniffer.plugin.js  README.md  build.rs  voice_native2.pcap
.github/workflows/: ci.yml  release.yml
scripts/: make_macos_app.sh
src/: config.rs  discord_connection.rs  heart_beat.rs  main.rs  mapping_struct.rs  message_buffer.rs  receive_struct.rs  rest.rs  send_struct.rs  utils.rs
src/config/: config.rs
src/discord_connection/: connection.rs
src/receive_struct/: call_create.rs  call_delete.rs  channel_create.rs  channel_unread_update.rs  channel_update.rs  gateway.rs  gateway_events.rs  guild_delete.rs  guild_integration_update.rs  guild_member_remove.rs  hello.rs  integration_update.rs  message_ack.rs  message_create.rs  message_delete.rs  msg_response.rs  presence_update.rs  ready.rs  receive_event.rs  session_replace.rs  typing_start.rs  user_application_identity_update.rs  user_guild_settings_update.rs  user_settings_update.rs  voice_channel_start_time_update.rs  voice_channel_status_update.rs  voice_server_update.rs  voice_state_update.rs
src/send_struct/: force_join_vocal.rs  login_payload.rs  payload.rs  presence.rs  request_guild_members.rs  resume.rs  start_video.rs
src/tui/: ingest.rs  input.rs  mod.rs  state.rs  stream_view.rs  ui.rs
src/voice/: audio.rs  capture.rs  capture_wayland.rs  dsp.rs  gateway.rs  manager.rs  mod.rs  udp.rs  video.rs  vsend.rs  vtdec.rs  vtdec_stub.rs
src/voice/dave/: frame.rs  libdave.rs  mls.rs  mod.rs  runtime.rs  session.rs  wire.rs
